test/syntax-errors/type-case-equals/type-case-equals.foster
type case X = $X;

main = {
  0
};
